testsuite/tests/grammar/invalid_list/token-element.lkt
import common

@with_lexer(foo_lexer)
grammar foo_grammar {
    @main_rule main_rule <- ListNode(list+(@number))
}

class ListNode : FooNode {
    @parse_field items: ASTList[FooNode, FooNode]
}
